--- a/src/index.css
+++ b/src/index.css
@@ -46,10 +46,12 @@ code {
   border-radius: 3px;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 8rem;
+  font-size: 7rem;
   border-style: groove;
   position: relative;
-  bottom: 4rem;
+  bottom: 2rem;
+  border-radius: 20px;
+  font-family: 'Courier New', Courier, monospace;
 
 }
 
@@ -67,12 +69,14 @@ code {
   background-color: rgb(12, 201, 59);
   border: 1px solid rgb(12, 201, 59);
   color: white;
+
 }
 
 .button-primary-inactive {
   background-color: #3151ff;
   border: 1px solid #152684;
   color: white;
+  
   
 }
 
@@ -87,6 +91,7 @@ code {
   background-color: rgb(184, 17, 17);
   border: 1px solid rgb(184, 17, 17);
   color: white;
+ 
 }
 
 .rbutton-primary-inactive {
@@ -105,15 +110,16 @@ code {
   background-color:rgb(12, 201, 59); 
 }
 .green{
-  color: rgb(12, 201, 59);
-  font-size: 190px;
+  color: black;
+  font-size: 180px;
 
 }
 .countdown{
-  font-size: 190px;
+  font-size: 180px;
   color: black;
   
 }
+
 
 
 
