--- a/src/App.scss
+++ b/src/App.scss
@@ -61,7 +61,8 @@ input{
 }
 
 label{
-  font-size: 30px !important;
+  font-size: 40px !important;
+  
 }
 .Title{
   align-items: center;
@@ -82,6 +83,9 @@ li {
 }
 
 
+.add{
+  font-size: 30px;
+}
 .button{
   width: 70px;
   padding: 4px 8px 4px 8px;
@@ -185,15 +189,12 @@ p{
  text-align:center;
 position: relative;
 bottom: 5rem;
+
 }
 .AddTodo{
   margin-left:60px;
-
-  
-}
-.contain span{
-  display: block;
-
+  display: flex;
+  text-emphasis: none;
 }
 .times{
       padding-top: 5px ;
